# flutter-plugin-camera360

./: .gitignore  CHANGELOG.md  README.md  pubspec.yaml
example/lib/: main.dart
example/lib/models/: camera_settings.dart
example/lib/widgets/: camera_settings_panel.dart  panorama_preview_dialog.dart  reset_button.dart  settings_tabs.dart  settings_toggle_button.dart  stitcher_settings_panel.dart
ios/camera_360.framework/: Info.plist
ios/camera_360.framework/Headers/: Stitcher.h
lib/: camera_360.dart  camera_360_bindings_generated.dart
lib/models/: stitcher_settings.dart
lib/models/enums/: blender_type.dart  enums.dart  exposure_compensator_type.dart  feature_detection_method.dart  feature_matcher_type.dart  wave_correction_type.dart
lib/utilities/: stitcher.dart
src/macos/: CMakeLists.txt  README.md  build_executable.sh  install_opencv.sh  run_executable.sh  run_executable_12.sh  run_executable_6.sh
src/umbrella/Stitcher/: Stitcher.cpp  Stitcher.h  main.cpp
